@@ -1,3 +1,8 @@
+2005-10-07  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/gazpacholoader.py (DataTypeProperty.save): 
+	Do not show editor for Radio/Check, they're always boolean.
+
 2005-10-06  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/widgets/list.py (List.refresh): New method.
